# rz-rzilcompiler

./: .gitignore  ARCHITECURE.md  ArchEnum.py  Compiler.py  CompilerExtension.py  Configuration.py  Exceptions.py  FoPra-RZIL-Roadmap-02.12.21.md  Helper.py  HexagonExtensions.py  Mapping-operations-rzil-ops.md  Parser.md  Parser.py  README.md  REUSE.toml  Resource-PP.md  Roadmap.md  Transformer.md  manual.txt  pyproject.toml  references.md  requirements.txt  setup.py
.github/workflows/: black.yaml  flake8.yml  (+2 more)
.reuse/: dep5
Parser/: __init__.py  c-ansi-grammar.lark  grammar-tests.py
Preprocessor/: example.py  notes.md  testmatches.txt
Resources/: README.md
Tests/: ExpectedOutput.py  TestHelper.py  TestHybrids.py  TestParser.py  TestTransformer.py  grammar-tests.py  testHexagonGrammarTest.py  testTransformer.py  test_all.py  testcases.py
Transformer/: Effect.py  GlobalVar.py  HexagonExtension.py  ILOpsHolder.py  LocalVar.py  ManualTransformer.py  PluginInfo.py  Pure.py  README.md  RZILTransformer.py  Register.py  TextCoord.py  Transformer.py  TransformerExtension.py  ValueType.py  helper.py  helper_hexagon.py
design/: ARCHITECTURE.md  register-representation.md  rzil-map.md
parser/: behavior-grammar.lark  grammar-tests.py  testcases.py
preprocessor/: .requests.md.swp  example.py  requests.md  testpages.txt
ressources/: c-ansi-grammar.lark
rzilcompiler/: ArchEnum.py  Compiler.py  CompilerExtension.py  Configuration.py  Exceptions.py  Helper.py  HexagonExtensions.py  Parser.py
test_bins/: README.md
transformer/: Effect.py  Pure.py  Transformer.py
(+172 files in other folders)
