[project]
name = "rzilcompiler"
version = "0.1.0"
description = "C to RzIL Compiler to extend the Rizin Hexagon plugin."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "colorama>=0.4.3",
  "lark~=1.1.9",
  "setuptools~=80.8.0",
  "pcpp~=1.30",
  "tqdm~=4.66.4",
  "reuse>=6.2.0",
]
